--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <audio src="./audios/found.mp3" id="catch"></audio>
     <a-scene sound="src: url(./audios/ambiance.mp3); loop:true; autoplay:true; volume:1;"
-    physics="debug:true">
+    physics="debug:false">
       <a-entity camera look-controls listener="stepFactor:0.1" position="0 2 30">
         <a-entity id="cursor" static-body="shape:sphere; sphereRadius: 0.001;" cursor="fuse: true;fuseTimeout:100000000"
           material="color:black"
